added FilterParser.sln.DotSettings.user to ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -487,3 +487,4 @@ FilterParser.sln.DotSettings.user
 .gitignore
 .vscode/settings.json
 .idea/.idea.FilterParser/.idea/sonarlint/securityhotspotstore/index.pb
+FilterParser.sln.DotSettings.user
